objects/ASI_CRM_Subbrand_Volume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRMT_2T3Depletion_ToALL_TY_VS_LY_YTD__c</fullName>
        <label>T2/T3 Depletion to ALL - TY VS LY YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AVG_Offtake_BTL__c</fullName>
        <label>MTD Offtake Daily Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AVG_Offtake_CR12__c</fullName>
        <label>MTD Offtake Daily Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AVG_Offtake_STD_Billing__c</fullName>
        <label>MTD Offtake Daily Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AVG_Offtake_STD__c</fullName>
        <label>MTD Offtake Daily Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AVG_Offtake__c</fullName>
        <label>MTD Offtake Daily Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS/Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>WS_Outlet_Subbrand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Vol_9L__c</fullName>
        <formula>ASI_CRM_PR_Direct__c +  ASI_CRM_T1_Depletion__c +  ASI_CRM_T2_Depletion__c - ASI_CRM_Volume_Out_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Vol (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Vol_CR12__c</fullName>
        <formula>ASI_CRM_T1_Depletion_CR12__c+ASI_CRM_T2_Depletion_CR12__c+ASI_CRM_PR_Direct_CR12__c - ASI_CRM_Volume_Out_CR12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Vol(CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Vol_STD__c</fullName>
        <formula>ASI_CRM_PR_Direct_STD__c+ASI_CRM_T1_Depletion_STD__c+ASI_CRM_T2_Depletion_STD__c-ASI_CRM_Volume_Out_STD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Vol(STD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Vol__c</fullName>
        <formula>ASI_CRM_T1_Depletion_STD_Billing__c +  ASI_CRM_T2_Depletion_STD_Billing__c +  ASI_CRM_PR_Direct_STD_Billing__c - ASI_CRM_Volume_Out_STD_Billing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Vol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Btl__c</fullName>
        <label>Black Cap Collection (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_CR12__c</fullName>
        <label>Black Cap Collection (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_GS__c</fullName>
        <label>Black Cap Collection (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Last_FY_MTD_9L__c</fullName>
        <label>Black Cap - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Black Cap - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Last_FY_YTD_9L__c</fullName>
        <label>Black Cap - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Black Cap - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_STD__c</fullName>
        <label>Black Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_Std_Billing__c</fullName>
        <label>Black Cap Collection (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>Black Cap - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_This_FY_YTD_9L__c</fullName>
        <label>Black Cap - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap_This_FY_YTD_Std_Btl__c</fullName>
        <label>Black Cap - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Black_Cap__c</fullName>
        <label>Black Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Collected_CR12__c</fullName>
        <formula>ASI_CRM_Green_Cap_CR12__c+ASI_CRM_Empty_Bottle_CR12__c+ASI_CRM_Deductible_Cap_with_Issues_CR12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Collected (CR12)﻿</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Collected__c</fullName>
        <formula>ASI_CRM_Green_Cap_Std_Billing__c +  ASI_CRM_Empty_Bottle_Std_Billing__c + ASI_CRM_DeductCapWithIssue_StdBill__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand_Code__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_MFM_Brand__r.ASI_MFM_Brand_Code__c</formula>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Account_Id__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_CRM_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand_Agg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>WS/Outlet Sub-brand Volume</relationshipLabel>
        <relationshipName>WS_Outlet_Sub_brand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand_Sequence__c</fullName>
        <formula>TEXT(ASI_CRM_Subbrand__r.ASI_MFM_Brand__r.ASI_HK_CRM_Sequence__c) &amp; &quot;-&quot; &amp; ASI_CRM_Subbrand__r.ASI_MFM_Brand__r.ASI_HK_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Competitor_Sub_brand__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_MFM_Brand__r.ASI_CRM_CN_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Sub-brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>WS/Outlet Sub-brand Volume</relationshipLabel>
        <relationshipName>WS_Outlet_Sub_brand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Daily_Offtake_Decrease__c</fullName>
        <formula>IF( 
 AND(Month(ASI_CRM_End_Date__c) = Month(Today()),Year(ASI_CRM_End_Date__c) = Year(Today())) 
,  ASI_CRM_Offtake__c*-1 , ASI_CRM_Offtake__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Offtake Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ExcludePaymentVol_Item_Group__c</fullName>
        <formula>ASI_CRM_Item_Group__r.ASI_CRM_CN_Exclude_From_Payment_Volume__c</formula>
        <label>Exclude From Payment Volume(Item Group)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Exclude_From_Payment_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Payment Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Intake_GS_T1_price__c</fullName>
        <label>Intake (GS T1 Price)</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_No_Month__c</fullName>
        <formula>IF(ISBLANK(ASI_CRM_CN_Original_Contract_Start_Date__c), 0, 
( VALUE(ASI_CRM_Year__c)  - YEAR(ASI_CRM_CN_Original_Contract_Start_Date__c))*12 +  VALUE(ASI_CRM_Month__c) - MONTH(ASI_CRM_CN_Original_Contract_Start_Date__c)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V0.0 No. of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Original_Contract_Start_Date__c</fullName>
        <label>V0.0 Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Request_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to indicate that volume has been included in new contract ON/OFF payment</description>
        <label>Payment Request Line Item</label>
        <referenceTo>ASI_TH_CRM_PaymentRequestLineItem__c</referenceTo>
        <relationshipLabel>WS/Outlet Sub-brand Volume</relationshipLabel>
        <relationshipName>WS_Outlet_Sub_brand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Product_Category_Agg__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Product_Category__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_CRM_CN_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_brand_Name__c</fullName>
        <formula>ASI_CRM_Subbrand__r.ASI_HK_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_brand_Sequence__c</fullName>
        <formula>TEXT(ASI_CRM_Subbrand__r.ASI_HK_CRM_Sequence__c) &amp; &quot;-&quot; &amp; ASI_CRM_Subbrand__r.ASI_HK_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>WS/Outlet Sub-brand Volume (Supplier)</relationshipLabel>
        <relationshipName>WS_Outlet_Sub_brand_Volume1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Volume_Out_GS_Price__c</fullName>
        <label>Volume Out GS Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap_with_Issues_Btl__c</fullName>
        <label>Cap with Issues (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap_with_Issues_CR12__c</fullName>
        <label>Cap with Issues (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap_with_Issues_Std_Billing__c</fullName>
        <label>Cap with Issues (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap_with_Issues_Std_Btl__c</fullName>
        <label>Cap with Issues (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap_with_Issues__c</fullName>
        <label>Cap with Issues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DeductCapWithIssue_StdBill__c</fullName>
        <description>Deductible Cap with Issues (Std Billing)</description>
        <label>Deductible Cap with Issues (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DeductibleCapWithIssues_Std_Btl__c</fullName>
        <label>Deductible Cap with Issues (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Deductible_Cap_with_Issues_Btl__c</fullName>
        <label>Deductible Cap with Issues (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Deductible_Cap_with_Issues_CR12__c</fullName>
        <label>Deductible Cap with Issues (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Deductible_Cap_with_Issues__c</fullName>
        <label>Deductible Cap with Issues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Btl__c</fullName>
        <label>Empty Bottle (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_CR12__c</fullName>
        <label>Empty Bottle (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_GS__c</fullName>
        <label>Empty Bottle (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Last_FY_MTD_9L__c</fullName>
        <label>Empty Bottle - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Empty Bottle - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Last_FY_YTD_9L__c</fullName>
        <label>Empty Bottle - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Empty Bottle - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Std_Billing__c</fullName>
        <label>Empty Bottle (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_Std_Btl__c</fullName>
        <label>Empty Bottle (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_This_FY_VS_Last_FY__c</fullName>
        <label>Empty Bottle-This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_This_FY_YTD_9L__c</fullName>
        <label>Empty Bottle - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle_This_FY_YTD_Std_Btl__c</fullName>
        <label>Empty Bottle - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Empty_Bottle__c</fullName>
        <label>Empty Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Btl__c</fullName>
        <label>Green Cap Collection (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_CR12__c</fullName>
        <label>Green Cap Collection (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_GS__c</fullName>
        <label>Green Cap Collection (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Last_FY_MTD_9L__c</fullName>
        <label>Green Cap - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Green Cap - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Last_FY_YTD_9L__c</fullName>
        <label>Green Cap - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Green Cap - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_STD__c</fullName>
        <label>Green Cap Collection (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_Std_Billing__c</fullName>
        <label>Green Cap Collection (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>Green Cap - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_This_FY_YTD_9L__c</fullName>
        <label>Green Cap - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap_This_FY_YTD_Std_Btl__c</fullName>
        <label>Green Cap - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_Cap__c</fullName>
        <description>9L</description>
        <label>Green Cap Collection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_9L__c</fullName>
        <label>Green Outlet Reception Scan (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_Btl__c</fullName>
        <label>Green Outlet Reception Scan (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_CR12__c</fullName>
        <label>Green Outlet Reception Scan (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_GS__c</fullName>
        <label>Green Outlet Reception Scan (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_Std_Billing__c</fullName>
        <label>Green Outlet Reception Scan (Std. Bil)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Green_ORS_Std_Btl__c</fullName>
        <label>Green Outlet Reception Scan (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grey_Cap_Btl__c</fullName>
        <label>Grey Cap (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grey_Cap_CR12__c</fullName>
        <label>Grey Cap (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grey_Cap_Std_Billing__c</fullName>
        <label>Grey Cap (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grey_Cap_Std_Btl__c</fullName>
        <label>Grey Cap (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grey_Cap__c</fullName>
        <label>Grey Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_9L__c</fullName>
        <label>Intake (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Btl__c</fullName>
        <label>Intake (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_CR12__c</fullName>
        <label>Intake (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_GS__c</fullName>
        <label>Intake (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Last_FY_MTD_9L__c</fullName>
        <label>Intake - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Intake - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Last_FY_YTD_9L__c</fullName>
        <label>Intake - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Intake - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Std_Billing__c</fullName>
        <label>Intake (Std. Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Std_Btl__c</fullName>
        <label>Intake (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>Intake - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_This_FY_YTD_9L__c</fullName>
        <label>Intake - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_This_FY_YTD_Std_Btl__c</fullName>
        <label>Intake - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>WS/Outlet Sub-brand Volume</relationshipLabel>
        <relationshipName>WS_Outlet_Sub_brand_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MTD_compare_to_Last_FY__c</fullName>
        <formula>IF(ASI_CRM_POS_LY_MTD_Std_Btl__c=0||ASI_CRM_POS_Std_Btl__c =0,null,(ASI_CRM_POS_Std_Btl__c - ASI_CRM_POS_LY_MTD_Std_Btl__c)/ASI_CRM_POS_LY_MTD_Std_Btl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD compare to Last FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Btl__c</fullName>
        <label>Offtake (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_CR12__c</fullName>
        <label>Offtake (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_GS__c</fullName>
        <label>Offtake (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Last_FY_MTD_9L__c</fullName>
        <label>Offtake - Last FY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Last_FY_MTD_Std_Btl__c</fullName>
        <label>Offtake - Last FY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Last_FY_YTD_9L__c</fullName>
        <label>Offtake - Last FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Last_FY_YTD_Std_Btl__c</fullName>
        <label>Offtake - Last FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Std_Billing__c</fullName>
        <label>Offtake (Std Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Std__c</fullName>
        <label>Offtake (Std Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>Offtake - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_This_FY_YTD_9L__c</fullName>
        <label>Offtake - This FY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_This_FY_YTD_Std_Btl__c</fullName>
        <label>Offtake - This FY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake__c</fullName>
        <description>9L</description>
        <label>Offtake</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_9L__c</fullName>
        <label>POS (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_Btl__c</fullName>
        <label>POS (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_CR12__c</fullName>
        <label>POS (CR12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_GS__c</fullName>
        <label>POS (GS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_FY_9L__c</fullName>
        <label>POS LY FY (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_FY_Std_Btl__c</fullName>
        <label>POS LY FY (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_MTD_9L__c</fullName>
        <label>POS LY MTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_MTD_Std_Btl__c</fullName>
        <label>POS LY MTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_YTD_9L__c</fullName>
        <label>POS LY YTD (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_LY_YTD_Std_Btl__c</fullName>
        <label>POS LY YTD (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_Std_Billing__c</fullName>
        <label>POS (Std. Billing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_Std_Btl__c</fullName>
        <label>POS (Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_This_FY_VS_Last_FY_YTD__c</fullName>
        <label>POS - This FY VS Last FY YTD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_YTD_Std_Btl_9L__c</fullName>
        <label>POS YTD (Std. Btl)(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_YTD_Std_Btl_Std_Btl__c</fullName>
        <label>POS YTD (Std. Btl)(Std. Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_DIRECT_GS_LESS_50ML__c</fullName>
        <label>PR Direct GS (&lt;= 50ML)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>